Format of java files missed earlier